--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,18 @@
   --error: #dc2626;
   --borde: #e5e7eb;
 }
+
 html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  height: auto;
+  min-height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+body > div.div-main {
+  position: relative;
+  z-index: 1;
+  width: 100%;
 }
 
 * {
@@ -40,30 +48,67 @@ body > div {
 
 .header {
   text-align: center;
-  padding: 1.5rem 0rem;
+  padding: 1rem 0rem;
   background: linear-gradient(to bottom, var(--azul-clinico), var(#1A1C2C));
   color: var(--blanco);
 }
-.header > h1{
-  font-size: 2rem;
+
+.header_title{
+  color: #000;
+  font-size: 1.5rem;
 }
 
 .container {
+  width: 100%;
+  box-sizing: border-box;
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: 0.2rem auto;
   padding: 0 1rem;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
+  padding-bottom: 5rem;
+  padding-top:0rem;
 }
+.grid-2 > .field {
+  min-width: 0;
+}
+
 /* Mobile: una sola columna */
 @media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
   }
-}
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
 
+  .grid-2 > .field {
+    width: 100%;
+  }
+  .header {
+    text-align: center;
+    padding: 0.2rem 0rem;
+   
+  }
+  .header_title{
+    padding-left: 1rem;
+    font-size: 1.2rem;
+  }
+  .subtitle{
+    padding: 0;
+  }
+  .card{
+    display: contents;
+  }
+
+}
+.subtitle{
+  background-color: #0077b6;
+  padding: 1rem;
+  margin: 0 !important;
+}
 
 .card {
   background: var(--blanco);
@@ -71,7 +116,8 @@ body > div {
   border-radius: 12px;
   padding: 1rem 1.25rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, .08);
-  margin-bottom: 1rem
+  margin-bottom: 1rem;
+  
 }
 
 .grid-2 {
@@ -202,13 +248,37 @@ th {
 }
 
 .footer {
+  display: flex;
+  width: 100%;
   padding: 1.5rem 1rem;
-  text-align: center;
   color: var(--blanco);
   
-  background: linear-gradient(to top, #1A1C2C, #484AA8);
+  background: #0077B6;
+  
 }
-
+.footer-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  width: 100%;
+  
+}
+.footer-logo{
+  width: 100px;
+  height: auto;
+  border-radius: 100%;
+}
+.social-icons{
+  display: flex;
+  gap: 2;
+  align-items: center;
+}
+.social-icons > a > img{
+  width: 40px;
+  padding: 0.2rem;
+  
+}
 @media (max-width:720px) {
   .grid-2 {
     grid-template-columns: 1fr
